--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = -p hematite.tests.pytest_support --cov hematite --cov-report html
+addopts = -p hematite.tests.pytest_support --doctest-modules --cov hematite --cov-report html
